jena-shex/src/test/files/spec/negativeStructure/TwoNegation.shex
# Negated circular reference to :S.
PREFIX :       <http://example.org/>

:S (    (NOT @:T)
    AND (NOT @:U) )
:T {
  :a @:S
}
:U {
  :b .
} 
